--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "multer": "1.4.5-lts.2",
     "nanoid": "^5.1.5",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pnpm": "^10.13.1",
     "reflect-metadata": "^0.2.2",
@@ -78,6 +81,9 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.9",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-github": "^1.1.12",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
