--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "passport-local": "^1.0.0",
     "pnpm": "^10.13.1",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.0.1",
     "rxjs": "^7.8.2",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
